# llm-vram-estimator

./: .gitignore  README.md  cli.py  pyproject.toml
.github/: copilot-instructions.md
llm_vram_estimator/: __init__.py  cli.py  display.py  estimation.py  lmstudio.py  main.py  ollama.py  vram.py
tests/: test_estimation.py  test_vram.py
