[tool.poetry]
name = "llm-vram-estimator"
version = "0.1.0"
description = "CLI tool to estimate maximum safe token context length for installed LLMs"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
pynvml = "^11.0.0"
requests = "^2.31.0"
rich = "^13.3.5"
typer = {extras = ["all"], version = "^0.16.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
